GitVersion1/objects/User.object
<CustomObject>
    <fields>
        <fullName>Auto_Validate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Validate?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Poland</fullName>
                </value>
                <value>
                    <fullName>CPN - France</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Vietnam</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>CPN China</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Diamond V</fullName>
                </value>
                <value>
                    <fullName>Digital Insights</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>Format Solutions</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Greece</fullName>
                </value>
                <value>
                    <fullName>Guatemala</fullName>
                </value>
                <value>
                    <fullName>Honduras</fullName>
                </value>
                <value>
                    <fullName>Hungary</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAN_Business__c</fullName>
        <label>Business Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CFN</fullName>
                </value>
                <value>
                    <fullName>CPN</fullName>
                </value>
                <value>
                    <fullName>CQN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>DZ</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BS</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BY</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BZ</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BT</fullName>
                </value>
                <value>
                    <fullName>BO</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BW</fullName>
                </value>
                <value>
                    <fullName>BV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                    <color>#009900</color>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                    <color>#3333FF</color>
                    <label>EMEA</label>
                </value>
                <value>
                    <fullName>APAC</fullName>
                    <color>#CC6600</color>
                    <label>APAC</label>
                </value>
                <value>
                    <fullName>LA</fullName>
                    <color>#990000</color>
                    <label>LA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DataStewardDL__c</fullName>
        <description>This field is used to capture the distribution list/email for the country specific Data Steward</description>
        <inlineHelpText>Distribution list/email for the Data Steward</inlineHelpText>
        <label>DataStewardDL</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_18_long__c</fullName>
        <description>Long 18 signs Id - needed to Data Steward to quickly identify user Id for Data Loader mass changes.</description>
        <formula>CASESAFEID(Id)</formula>
        <label>Id 18 long</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <formula>IF(Contains( Profile.UserLicense.Name,&apos;Salesforce&apos;), SUBSTITUTE( Profile.UserLicense.Name,&quot;Salesforce&quot;,&quot;Sales Cloud Full Sandbox&quot;), 
IF(Contains( Profile.UserLicense.Name,&apos;Chatter Free&apos;), SUBSTITUTE( Profile.UserLicense.Name,&quot;Chatter Free&quot;,&quot;Chatter Free&quot;), 
IF(Contains( Profile.UserLicense.Name,&apos;Chatter External&apos;), SUBSTITUTE( Profile.UserLicense.Name,&quot;Chatter External&quot;, &quot;Chatter External&quot;), 
IF(Contains( Profile.UserLicense.Name,&apos;Force.com - App Subscription&apos;), SUBSTITUTE( Profile.UserLicense.Name,&quot;Force.com - App Subscription&quot;, &quot;Force.com - App Subscription&quot;),&apos;&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Of_Business__c</fullName>
        <label>Line Of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AH - Dairy</fullName>
                </value>
                <value>
                    <fullName>AH - Poultry</fullName>
                </value>
                <value>
                    <fullName>AN - Feed Additives</fullName>
                </value>
                <value>
                    <fullName>AN - Poultry</fullName>
                </value>
                <value>
                    <fullName>AH - Petcare</fullName>
                </value>
                <value>
                    <fullName>AN Dairy - Feed Additives</fullName>
                </value>
                <value>
                    <fullName>IBG TRADING</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Potential_Access__c</fullName>
        <label>Potential Access</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Volume</fullName>
                </value>
                <value>
                    <fullName>CFE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Contact_Language__c</fullName>
        <label>Primary Contact Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Albanian</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Armenian</fullName>
                </value>
                <value>
                    <fullName>Basque</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
                <value>
                    <fullName>Cambodian</fullName>
                </value>
                <value>
                    <fullName>Catalan</fullName>
                </value>
                <value>
                    <fullName>Chinese (Mandarin)</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Estonian</fullName>
                </value>
                <value>
                    <fullName>Fiji</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Georgian</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Gujarati</fullName>
                </value>
                <value>
                    <fullName>Hebrew</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
                <value>
                    <fullName>Icelandic</fullName>
                </value>
                <value>
                    <fullName>Indonesian</fullName>
                </value>
                <value>
                    <fullName>Irish</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <formula>Profile.Name</formula>
        <label>Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIVA_Collector_Account_Name__c</fullName>
        <label>RIVA Collector Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CAN_Business__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CPN Europe</fullName>
                </value>
                <value>
                    <fullName>CPN MEA</fullName>
                </value>
                <value>
                    <fullName>CPN Russia</fullName>
                </value>
                <value>
                    <fullName>CPN North America</fullName>
                </value>
                <value>
                    <fullName>Digital Insights</fullName>
                </value>
                <value>
                    <fullName>Format Solutions</fullName>
                </value>
                <value>
                    <fullName>CPN LATAM North</fullName>
                </value>
                <value>
                    <fullName>CPN LATAM South</fullName>
                </value>
                <value>
                    <fullName>CPN India</fullName>
                </value>
                <value>
                    <fullName>CPN Southeast Asia</fullName>
                </value>
                <value>
                    <fullName>CPN China</fullName>
                </value>
                <value>
                    <fullName>Diamond V</fullName>
                </value>
                <value>
                    <fullName>CFN United States</fullName>
                </value>
                <value>
                    <fullName>CFN Canada</fullName>
                </value>
                <value>
                    <fullName>CFN LATAM</fullName>
                </value>
                <value>
                    <fullName>CFN Europe</fullName>
                </value>
                <value>
                    <fullName>CFN Greater China</fullName>
                </value>
                <value>
                    <fullName>CFN South Korea</fullName>
                </value>
                <value>
                    <fullName>CFN Vietnam</fullName>
                </value>
                <value>
                    <fullName>CFN Southeast Asia</fullName>
                </value>
                <value>
                    <fullName>CFN India</fullName>
                </value>
                <value>
                    <fullName>CQN North Sea</fullName>
                </value>
                <value>
                    <fullName>CQN North America</fullName>
                </value>
                <value>
                    <fullName>CQN LATAM North</fullName>
                </value>
                <value>
                    <fullName>CQN Asia North</fullName>
                </value>
                <value>
                    <fullName>CQN Asia South</fullName>
                </value>
                <value>
                    <fullName>CFN Mexico</fullName>
                </value>
                <value>
                    <fullName>CFN Chile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <description>Role name used for filtering in reports.</description>
        <formula>UserRole.Name</formula>
        <label>Role Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roll_Out_Wave__c</fullName>
        <description>Used for filtering waves of users being roll-out - needed for resetting and enabling in different timings</description>
        <label>Roll-Out Wave</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesLogic_id__c</fullName>
        <label>SalesLogic id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Saleslogix_ID__c</fullName>
        <label>Saleslogix ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <label>User Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>uf__Adoption_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should this user be exempt from adoption tracking?  Examples might be senior management, system admins, users in countries involving data privacy / workers&apos; council issues.</description>
        <label>Adoption Exempt?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>uf__User_Champion__c</fullName>
        <inlineHelpText>For Usage Force, you can choose to have Managers manage the adoption of their users or Adoption Champions.  Adoption Champtions would be held accountable for the success of their groups of users.</inlineHelpText>
        <label>User Champion</label>
        <relationshipName>UserChampion</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>License_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllDSUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>steward</value>
        </filters>
        <label>All DS Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Thomas_list</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Customer Community User</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>notEqual</operation>
            <value>achin_suman@cargill.com.portal</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Thomas list</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>License_Type__c</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>SFCONTENT_USER</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CREATED_DATE</columns>
        <columns>IS_FROZEN</columns>
        <filterScope>Everything</filterScope>
        <label>All users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_users_no_Marketing_Content</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>License_Type__c</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>SFCONTENT_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SFCONTENT_USER</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CORE.USERS.COUNTRY_CODE</field>
            <operation>equals</operation>
            <value>PL</value>
        </filters>
        <label>All users no Marketing Content</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Baxter_Community_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Customer Community User</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>equals</operation>
        </filters>
        <label>Baxter Community Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NA_Marketing_Users</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Marketing Coordinator</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Marketing Data Steward</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Marketing Event Coordinator</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Marketing Invoicer</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Marketing Manager</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Sales Professional – US Retail</value>
        </filters>
        <label>NA Marketing Users</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>